--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,10 @@
   </head>
   <body>
     {% include header.html %}
-    <main class="main-content">
-      {{ content }} <!-- Содержимое из index.md вставляется сюда -->
-    </main>
+    <div class="grid-container">
+      <main class="main-content">
+        {{ content }} <!-- Содержимое из index.md вставляется сюда -->
+      </main>
+    </div>
   </body>
 </html>
