--- a/_layouts/partiture.html
+++ b/_layouts/partiture.html
@@ -13,26 +13,29 @@
   <body>
     <div class="grid-container">
       {% include header.html %}
-      <div class="grid-row">
-        <aside class="sidebar-grid">
-          <h3>{{ page.parent_folder_title }}</h3>
-          <div id="folder-tree"></div>
-        </aside>
-        <main class="content-grid">
-          <h2>{{ page.title }}</h2>
+      <main class="main-content grid-row">
+        <div class="grid-col-12">
+          <nav class="breadcrumb">
+            <a href="{{ '/' | relative_url }}">Главная</a> >
+            <a href="{{ '/partitures/' | relative_url }}">Партитуры</a> >
+            {% if page.parent_folder_path %}
+              <a href="{{ page.parent_folder_path | relative_url }}">{{ page.parent_folder_title }}</a> >
+            {% endif %}
+            <span>{{ page.title }}</span>
+          </nav>
           <div class="abc-container">
             <div id="abc-display"></div>
             <div class="abc-source" style="display: none;">
               {{ page.abc_content }}
             </div>
           </div>
-        </main>
-      </div>
+        </div>
+      </main>
     </div>
 
     <script src="{{ '/assets/js/acoustic_grand_piano-mp3.js' | relative_url }}"></script>
     <!-- Подключаем jQuery ПЕРЕД jstree и abcjs-ui -->
-    <script src="https://code.jquery.com/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="{{ '/assets/js/jquery.min.js'  }}"></script>
     <script src="{{ '/assets/js/jstree/jstree.min.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/abc-ui-1.0.0.min.js' | relative_url }}"></script>
     <script>
