--- a/_layouts/partiture_folder.html
+++ b/_layouts/partiture_folder.html
@@ -12,22 +12,24 @@
   <body>
     <div class="grid-container">
       {% include header.html %}
-      <div class="grid-row">
-        <aside class="sidebar-grid">
+      <main class="main-content grid-row">
+        <aside class="sidebar-grid grid-col-3">
           <h3>Навигация</h3>
           <div id="folder-tree"></div>
         </aside>
-        <main class="content-grid">
+        <div class="grid-col-9">
           {% if page.full_tree %}
             <div id="full-tree"></div>
           {% endif %}
-          {{ content }} <!-- Содержимое из folder.index вставляется сюда -->
-        </main>
-      </div>
+          <div class="content-grid">
+            {{ content }} <!-- Содержимое из folder.index вставляется сюда -->
+          </div>
+        </div>
+      </main>
     </div>
 
     <!-- Подключаем jQuery ПЕРЕД jstree -->
-    <script src="https://code.jquery.com/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="{{ '/assets/js/jquery.min.js'  }}"></script>
     <script src="{{ '/assets/js/jstree/jstree.min.js' | relative_url }}"></script>
 
     <script>
