рихтуем отступы слева и справа

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header grid-row">
+<header class="header">
     <h1>{{ site.title }}</h1>
     <nav class="main-nav">
         <a href="{{ '/' | relative_url }}">Главная</a>
