навигация и верстка внутренних страниц

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,4 @@
+<!-- _layouts/home.html -->
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -9,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | relative_url }}"/>
   </head>
   <body>
-     <div class="grid-container">
+    <div class="grid-container">
       <div class="grid-row">
         <div class="grid-col-12">
           {% include header.html %}
