--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <h1>{{ site.title }}</h1>
     <nav class="main-nav">
         <a href="{{ '/' | relative_url }}">Главная</a>
-        <a href="{{ '/partitures/' | relative_url }}">Партитуры</a>
+        <a href="{{ '/scores/' | relative_url }}">Партитуры</a>
         {% if page.parent_folder_path %}
             <a href="{{ page.parent_folder_path | relative_url }}">{{ page.parent_folder_title }}</a>
         {% endif %}
